--- a/LuckyDream/LuckyDream/Views/Account/Login.cshtml
+++ b/LuckyDream/LuckyDream/Views/Account/Login.cshtml
@@ -7,38 +7,36 @@
 @section Styles{
 
     <style>
-        body {
-            /*background-image: url("https://mdbootstrap.com/wp-content/uploads/2019/02/back.jpg");
-            background-position: center;
-            background-repeat: no-repeat;
-            -webkit-background-size: cover;
-            background-size: cover;*/
+
+        .container {
+            /*background-color: gray;*/
+            padding: 25px;
         }
     </style>
 
 }
 <h2>Login</h2>
 <div class="container">
-    <div class="row"></div>
-    <div class="col align-self-center " style="background-color:white;">
-        <div class="col-sm-10 offset-sm-1">
+    @*<div class="col align-self-center container">*@
+        <div class="col-12 col-md-6 offset-sm-3">
 
             <div class="row">
                 @using (Html.BeginForm("Index", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-login" }))
                 {
 
                     @*<div class="form-group mb-3">
-                        @Html.LabelFor(x => x.UserName)
-                        @Html.TextBoxFor(x => x.UserName, new { @class = "form-control input-login" })
-                    </div>*@
-                    <div class="form-group mb-3">
-                        @Html.TextBoxFor(x => x.UserName, new { @class = "form-control input-login" , placeholder="Username" })
+                            @Html.LabelFor(x => x.UserName)
+                            @Html.TextBoxFor(x => x.UserName, new { @class = "form-control input-login" })
+                        </div>*@
+                    <div class="input-group mb-3">
+                        @Html.TextBoxFor(x => x.UserName, new { @class = "form-control input-login user-icon", placeholder = "Username", required = "required" })
+
                     </div>
                     <div class="form-group mb-3">
-                        @Html.TextBoxFor(x => x.Password, new { @class = "form-control input-login", placeholder = "Password", type="password" })
+                        @Html.TextBoxFor(x => x.Password, new { @class = "form-control input-login", placeholder = "Password", type = "password" })
                     </div>
                     <div>
-                        <button class="btn btn-primary button-login">Login</button>
+                        <button class="btn btn-primary button-login" type="submit">Login</button>
                         <button class="btn btn-outline-danger button-login">Forgot Password</button>
                     </div>
                 }
@@ -46,5 +44,5 @@
             </div>
 
         </div>
-    </div>
+    @*</div>*@
 </div>
