--- a/LuckyDream/LuckyDream/Content/myStyle.css
+++ b/LuckyDream/LuckyDream/Content/myStyle.css
@@ -1,4 +1,13 @@
-﻿
+﻿.my-footer {
+    position: fixed !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    width: 100% !important;
+    background-color: #fff !important;
+    border: 1px solid #dee2e6 !important;
+    padding: 15px;
+}
+
 .form-login {
     width: 100%;
 }
