--- a/LuckyDream/LuckyDream/Views/Shared/_Layout-Login.cshtml
+++ b/LuckyDream/LuckyDream/Views/Shared/_Layout-Login.cshtml
@@ -23,10 +23,11 @@
     @Html.Partial("_Top-Navbar")
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+
+        <div class="my-footer">
+            <footer>my footer
+            </footer>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
