--- a/LuckyDream/LuckyDream/Views/Shared/_Layout.cshtml
+++ b/LuckyDream/LuckyDream/Views/Shared/_Layout.cshtml
@@ -3,18 +3,19 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title </title>
     <style>
 
-        body, html {
+        html {
+            height: 100%;
+        }
+        body {
             height: 100%;
             background: #fff;
-            background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+            background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%) no-repeat;
+            background-attachment: fixed;
         }
 
-        .navbar {
-            margin-bottom: 25px;
-        }
     </style>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/font-awesome")
