--- a/LuckyDream/LuckyDream/Views/Shared/_Top-Navbar.cshtml
+++ b/LuckyDream/LuckyDream/Views/Shared/_Top-Navbar.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <nav class="navbar navbar-expand-lg navbar-light bg-white border">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Lucky Dream</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,9 +23,6 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
